--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,8 +6,23 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://code.jquery.com/jquery-1.10.2.js"> </script>
+  <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"> </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 <body>
-  <app-root></app-root>
+  <div class="container">
+    <div class="row ">
+
+      <div class="offset-lg-4 col-lg-4 offset-1 col-10 center-content">
+        <app-root></app-root>
+      </div>
+    </div>
+
+  </div>
+
 </body>
 </html>
