--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,18 +11,20 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jsqr@1.0.0/dist/jsQR.js"></script>
 
 </head>
 <body>
   <div class="container">
     <div class="row ">
-
       <div class="offset-lg-4 col-lg-4 offset-1 col-10 center-content">
+        
         <app-root></app-root>
+        
       </div>
     </div>
-
   </div>
+
 
 </body>
 </html>
