--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -12,7 +12,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jsqr@1.0.0/dist/jsQR.js"></script>
-
+  <link rel="icon" href="assets/car-logo.png" type="image/icon type">
 </head>
 <body>
   <div class="container">
